<resources>
    <string name="app_name" translatable="false">PicAround</string>
    <string name="facebook_app_id" translatable="false">1895338284044111</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1895338284044111</string>
    <string name="no_login_text"><u>NO, THANKS</u></string>
    <string name="continue_mex">Continue</string>
    <string name="auth_error">Authentication Error! Please try again verifying your credentials</string>
    <string name="logout_message">Do you really want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="contact">Contact us</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="profile">Profile</string>
    <string name="registered_email">Email already registered</string>
    <string name="link_account_message">Do you want to link this account to the already registered one?</string>
    <string name="auth_error_link">Authentication failed. Please select the correct Google account</string>
    <string name="auth_ok_link">Accounts have been linked</string>
    <string name="username">Username</string>
    <string name="basic_info_text">Welcome to the PicAround world! \nPlease select a username and insert your date of birth</string>
    <string name="registration_needed">You have to complete the registration!</string>
    <string name="age_missing">Date of birth is missing</string>
    <string name="age_not_in_range">Age not in range. Please put your real date of birth</string>
    <string name="username_missing">Username is missing</string>
    <string name="username_unavailable">Sorry, this username is not available</string>
    <string name="username_with_spaces">Username cannot contain spaces</string>
    <string name="registration_ok">Registration successful!</string>
    <string name="address_not_found">Address not found</string>
    <string name="loading">Loading&#8230;</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyDlw4SqqMWqXS5kOjqhy1i351H2BnxW4tg
    </string>  <!-- TODO: change API key -->
    <string name="album_name" translatable="false">PicAround</string>
    <string name="exit">Exit</string>
    <string name="registration_exit">Do you really want to exit from the registration?</string>
    <string name="registration">Registration</string>
    <string name="open">Open</string>
    <string name="search">Search</string>
    <string name="welcome_to_picaround">Welcome to\nPicAround!</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="point_activity">Point</string>
    <string name="upload">UPLOAD</string>
    <string name="upload_title">Upload picture</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="fb_share">Share on Facebook</string>
    <string name="twt_share">Share on Twitter</string>
    <string name="name_missing">Name is missing</string>
    <string name="name_too_long">Name is too long</string>
    <string name="upload_failed">Error during the upload of the photo</string>
    <string name="upload_ok">The photo has been uploaded! The map will be refreshed in a few minutes</string>
    <string name="title_activity_pick_location">PickLocation</string>
    <string name="upload_prog_bar_title">Picture Upload</string>
    <string name="upload_prog_bar_text">Upload in progress</string>
    <string name="upload_prog_bar_fail">Upload failed</string>
    <string name="upload_prog_bar_ok">Upload completed</string>
    <string name="ok">Ok</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="invalid_date">Invalid date</string>
    <string name="views">views</string>
    <string name="likes">likes</string>
    <string name="popularity">popularity</string>
    <string name="confirm">continue</string>
    <string name="view">view</string>
    <string name="like">like</string>
    <string name="login_required">Login required</string>
    <string name="login_for_upload">You must be logged in order to upload a picture. Do you want to login?</string>
    <string name="login_for_like">You must be logged in order to put a like. Do you want to login?</string>
    <string name="add_picture">Add picture</string>
    <string name="start_gallery_intent_title">Select picture</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="update_profile_image">Update profile picture</string>
    <string name="dialog_update_profile_image_mex">Do you really want to update your profile picture?</string>
    <string name="not_logged_mex">You are not logged in! Please login to perform the action</string>
    <string name="name_field">Name:</string>
    <string name="surname_field">Surname:</string>
    <string name="age_field">Age:</string>
    <string name="email_field">Email:</string>
    <string name="search_user">Search user</string>
    <string name="delete">Delete</string>
    <string name="delete_picture">Delete picture</string>
    <string name="delete_picture_message">Are you sure that you want to delete this picture?</string>
    <string name="delete_picture_ok">The picture has been successfully deleted!</string>
    <string name="no_picture_uploaded">No picture uploaded</string>
    <string name="pictures">pictures</string>
    <string name="picture">picture</string>
    <string name="download">Save picture</string>
    <string name="share">Share external</string>
    <string name="no_users_found">No users found</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="birthday">Date of birth</string>
    <string name="uploading_picture">Uploading picture&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="info_section_app_name" translatable="false">@string/app_name</string>
    <string name="app_version">Version</string>
    <string name="app_details">The app has been developed during the Pervasive Systems course at Sapienza University of Rome</string>
    <string name="contact_us_hint">Type your text here</string>
    <string name="contact_info">Please feel free to contact us whether you would like to solve a problem, or just want to let us know how we did.
    Also before clicking the send e-mail button below, choose a rating in 1-5 stars to let us better improve your experience. \nFederico, Danilo and Riccardo.
    </string>
    <string name="email_address_to_contact" translatable="false">pervsys.diag.fdr@gmail.com</string>
    <string name="default_subject_for_email">Email sent from PicAround</string>
    <string name="send_email">Send email</string>
    <string name="info_tab">Info</string>
    <string name="contact_us_tab">Contact Us</string>
    <string name="user">User</string>
    <string name="Add_picture">Add a picture</string>
    <string name="permission_denied_text">Permission denied. Please upload a photo with the application</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="pick_location_text">Pick the location in which you took the photo</string>
    <string name="confirm_info_text">Are you sure you want to continue? The username cannot be changed in the future</string>
    <string name="confirm_info_title">Are you sure?</string>
    <string name="tutorial1_text">The markers on the map represent the points where photos have been taken</string>
    <string name="tutorial2_text">Get a point info by clicking on it</string>
    <string name="tutorial3_text">Take a look at a point\'s photos by scrolling the bottom panel</string>
    <string name="tutorial4_text">Upload a photo through the camera or selecting it from the gallery</string>
    <string name="tutorial5_text">Pick the exact location where the photo has been taken. You can search for the address in the search bar</string>
    <string name="tutorial6_text">Nearby photos are aggregated into a single point</string>
    <string name="tutorial7_text">Tap on the username to see the user\'s photos or on the location to open Google StreetView</string>
    <string name="tutorial7_title">User and location details</string>
    <string name="tutorial6_title">Aggregation of photos</string>
    <string name="tutorial5_title">Pick the location</string>
    <string name="tutorial4_title">Upload your photos</string>
    <string name="tutorial3_title">Photos took in a place</string>
    <string name="tutorial2_title">Info on points</string>
</resources>
