<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app= "http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/delete_picture"
        android:title="@string/delete"
        android:visible="false" />
    <item
        android:id="@+id/help"
        android:title="@string/help" />
    <item
        android:id="@+id/info"
        android:title="@string/info" />
    <item
        android:id="@+id/login"
        android:title="@string/login"
        android:visible="false" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:visible="false" />
    <item
        android:id="@+id/user"
        android:title="@string/user"
        android:orderInCategory="2"
        android:icon="@drawable/ic_person_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="@string/search_user"
        app:showAsAction="always" />
</menu>