<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <include layout="@layout/toolbar"> </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.alexvasilkov.gestures.views.GestureImageView
            android:id="@+id/image_to_upload"
            android:layout_width="match_parent"
            android:layout_height="240dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/top_gradient_bg" >
            </FrameLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/image_to_upload">

            <EditText
                android:id="@+id/photo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:maxLength="200"
                android:inputType="textMultiLine"
                android:hint="@string/description"/>

        </android.support.design.widget.TextInputLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/input_layout_description">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <CheckBox
                    android:id="@+id/fb_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/fb_share"
                    android:textColor="@color/primary_text_black"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/facebook_icon" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <CheckBox
                    android:id="@+id/twt_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/twt_share"
                    android:textColor="@color/primary_text_black"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/twitter_icon" />
            </TableRow>

        </TableLayout>

        <ImageButton
            android:id="@+id/rotate_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_rotate_right_white_24dp" />
    </RelativeLayout>

</LinearLayout>